--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,21 @@
   flex-direction: column;
   gap: 20px;
   padding: 20px;
+  border: 1px solid black;
 }
 .dish{
   display: flex;
+  width: 40%;
   align-items: center;
+  border: 1px solid black;
+  background-color: brown;
 }
 .dish-image{
   width: 150px;
   height: 150px;
   object-fit: cover;
   margin-right: 20px;
+  border: 1px solid black;
 }
 .dish-info h1 {
   margin: 0;
