--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,35 @@
+body{
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('./picture/piza.jpg');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  color: white;
+}
+body::before{
+  center:"";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+.App{
+  display: flex;
+  justify-content: center;
+  
+}
 .pizzeria{
+  position: relative;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -7,7 +38,7 @@
 }
 .dish{
   display: flex;
-  width: 40%;
+  width: 60%;
   align-items: center;
   border: 1px solid black;
   background-color: brown;
