--- a/src/App.css
+++ b/src/App.css
@@ -6,21 +6,26 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url('./picture/piza.jpg');
-  background-size: cover;
-  background-position: center;
   position: relative;
   color: white;
+  overflow: hidden;
+  background-image: url('./picture/piza.jpg');
+  background-size: cover;
+  backdrop-filter: brightness(50%);
+  background-position: center;
+
 }
 body::before{
-  center:"";
+
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
-  z-index: 1;
+  z-index: -1;
+  opacity: 0.7;
+
 }
 .App{
   display: flex;
