--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+.dish-image{
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  margin-right: 20px;
+  transition: transform 0.1s ease-in-out;
+}
 body{
   margin: 0;
   padding: 0;
@@ -16,7 +23,6 @@ body{
 
 }
 body::before{
-
   position: absolute;
   top: 0;
   left: 0;
@@ -37,7 +43,7 @@ body::before{
   z-index: 2;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 400px;
   padding: 20px;
   border: 1px solid black;
 }
@@ -47,6 +53,10 @@ body::before{
   align-items: center;
   border: 1px solid black;
   background-color: brown;
+  transition: transform 0.3s ease-in-out;
+  height: 150px;
+  object-fit: cover;
+  margin-right: 20px;
 }
 .dish-image{
   width: 150px;
@@ -54,6 +64,12 @@ body::before{
   object-fit: cover;
   margin-right: 20px;
   border: 1px solid black;
+}
+.dish-image:hover{
+  transform: scale(1.2);
+}
+.dish:hover{
+  transform: scale(1.2);
 }
 .dish-info h1 {
   margin: 0;
